# stanio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
stanio/: __init__.py  csv.py  json.py  reshape.py  reshape_params.py
test/: test_csv.py  test_json.py  test_reshape.py
test/data/bernoulli/: output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_missing_columns.csv  output_more_variables.csv
test/data/edges/: one_row.csv  oned.stan  oned_opt.csv  oned_sample.csv
test/data/rectangles/: output.stan  output_1.csv  output_2.csv  output_3.csv  output_4.csv
test/data/tuples/: output.stan
