[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stanio"
version = "0.1.0"
readme = "README.md"
authors = [{ "name" = "Brian Ward", "email" = "bward@flatironinstitute.org" }]
dependencies = ["numpy"]
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent"
]


[project.optional-dependencies]
test = [
    "pandas",
    "pytest",
    "pytest-cov",
]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["stanio"]

[tool.setuptools.package-data]
"stanio" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
