[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stanio"
readme = "README.md"
authors = [{ "name" = "Brian Ward", "email" = "bward@flatironinstitute.org" }]
dependencies = ["numpy"]
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "stanio.__version__"}

[tool.setuptools]
packages = ["stanio"]

[project.optional-dependencies]
test = [
    "pandas",
    "pytest",
    "pytest-cov",
]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["stanio"]

[tool.setuptools.package-data]
"stanio" = ["py.typed"]

